fix: detailview collapse - with repositioning

--- a/frontend/src/app/pages/ticket-detailview/ticket-detailview.component.css
+++ b/frontend/src/app/pages/ticket-detailview/ticket-detailview.component.css
@@ -8,7 +8,9 @@
 
 .expand-panel-button {
   align-self: flex-start;
-  margin: 60px 40px;
+  margin-top: 20px;
+  margin-left: 130px;
+  margin-bottom: 10px;
   padding: 8px 16px;
   background-color: #f5f5f5;
   border: 1px solid #e0e0e0;
@@ -19,6 +21,7 @@
   color: #666666;
   transition: all 0.2s ease;
   flex-shrink: 0;
+  z-index: 99999;
 }
 
 .expand-panel-button:hover {
@@ -50,9 +53,11 @@
 
 .panel-controls {
   position: absolute;
-  top: 20px;
-  left: 40px;
-  right: 40px;
+  background-color: white;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
   width: 35%;
 
   display: flex;
@@ -194,7 +199,7 @@
 }
 
 .description-section {
-  margin-bottom: 40px;
+  margin-bottom: 120px;
 }
 
 .section-title {
